force-app/main/default/objects/Encumbrance__c.object
<CustomObject>
    <description>Links an Encumbrace to a Contact</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Encumbrance</relationshipLabel>
        <relationshipName>Encumbrance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Deleted_In_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag used to allow hard delete to take place after the fact.

Assists in the situation where an update &amp; delete are received for the same encumbrance and the delete is processed first.</description>
        <label>Deleted In Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <description>Student id. Redundant field but useful for reconciliation.</description>
        <label>Person ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eff_apply_course__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply to Course</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eff_course_code__c</fullName>
        <label>Course Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eff_course_code_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the encumbrance is related to a specific course attempt</description>
        <label>Course Attempt</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The course attempt must be for the encumbered student</errorMessage>
            <filterItems>
                <field>$Source.Contact__c</field>
                <operation>equals</operation>
                <valueField>Course_Attempt__c.Contact__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Course_Attempt__c</referenceTo>
        <relationshipLabel>Encumbrance</relationshipLabel>
        <relationshipName>Encumbrance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>eff_description__c</fullName>
        <label>Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eff_expiry_date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>eff_sequence__c</fullName>
        <label>Effect Sequence</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eff_start_date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>eff_type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACAD-QUALS</fullName>
                </value>
                <value>
                    <fullName>ADM-ALERT</fullName>
                </value>
                <value>
                    <fullName>ATO-QRY</fullName>
                </value>
                <value>
                    <fullName>BLK-AD-MSA</fullName>
                </value>
                <value>
                    <fullName>BLK-COM-ST</fullName>
                </value>
                <value>
                    <fullName>BLK-EDSOA</fullName>
                </value>
                <value>
                    <fullName>BLK-FINAID</fullName>
                </value>
                <value>
                    <fullName>BLK-FN</fullName>
                </value>
                <value>
                    <fullName>BLK-HECS</fullName>
                </value>
                <value>
                    <fullName>BLK-MC-GEN</fullName>
                </value>
                <value>
                    <fullName>BLK-MISC-1</fullName>
                </value>
                <value>
                    <fullName>BLK-MUM-VS</fullName>
                </value>
                <value>
                    <fullName>BLK-NO-HEC</fullName>
                </value>
                <value>
                    <fullName>BLK-NO-PTB</fullName>
                </value>
                <value>
                    <fullName>BLK-OLA</fullName>
                </value>
                <value>
                    <fullName>BLK-OLA-MU</fullName>
                </value>
                <value>
                    <fullName>BLK-OSP</fullName>
                </value>
                <value>
                    <fullName>BLK-PPLAN</fullName>
                </value>
                <value>
                    <fullName>BLK-SCHOL1</fullName>
                </value>
                <value>
                    <fullName>BLK-SCHOL2</fullName>
                </value>
                <value>
                    <fullName>BLK-SF-MSA</fullName>
                </value>
                <value>
                    <fullName>BLK-SF-SUN</fullName>
                </value>
                <value>
                    <fullName>BLK-SPNS2</fullName>
                </value>
                <value>
                    <fullName>BLK-SSAF</fullName>
                </value>
                <value>
                    <fullName>BLK-STDFIN</fullName>
                </value>
                <value>
                    <fullName>BLK-SUS-FC</fullName>
                </value>
                <value>
                    <fullName>BLK-TFN</fullName>
                </value>
                <value>
                    <fullName>BLOCK-CBK</fullName>
                </value>
                <value>
                    <fullName>BLOCK-DEF</fullName>
                </value>
                <value>
                    <fullName>BLOCK-DISC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>enc_authorised_by__c</fullName>
        <label>Authorised By</label>
        <length>71</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enc_authorised_by_id__c</fullName>
        <label>Authorised By ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enc_category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACADEMIC</fullName>
                    <label>Academic</label>
                </value>
                <value>
                    <fullName>ADMIN</fullName>
                    <label>Administrative</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>enc_comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>enc_course_code__c</fullName>
        <label>Course Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enc_course_group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to a course group, indicating that the student may be blocked from enrolling in any member of that group</description>
        <inlineHelpText>Link to a course group, indicating that the student may be blocked from enrolling in any member of that group</inlineHelpText>
        <label>Course Group</label>
        <referenceTo>Course_Group__c</referenceTo>
        <relationshipLabel>Encumbrance</relationshipLabel>
        <relationshipName>Encumbrance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>enc_description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enc_exclusionstartdate__c</fullName>
        <label>ExclusionStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>enc_expired__c</fullName>
        <label>Expired By</label>
        <length>71</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enc_expired_id__c</fullName>
        <label>Expired By ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enc_expiry_date__c</fullName>
        <description>This date is not used to determine an Active status. The effect dates are instead used.</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>enc_info__c</fullName>
        <label>Info</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>enc_level__c</fullName>
        <label>Level</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>enc_sequence__c</fullName>
        <label>SPO Sequence</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enc_start_date__c</fullName>
        <description>This date is not used to determine an Active status. The effect dates are instead used.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>enc_type__c</fullName>
        <label>Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enceff_key__c</fullName>
        <description>Unique key for the combination of Encumbrance and Effect</description>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>financial_ind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Ind</label>
        <type>Checkbox</type>
    </fields>
    <label>Encumbrance</label>
    <listViews>
        <fullName>Active_Academic</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>eff_apply_course__c</columns>
        <columns>enc_category__c</columns>
        <columns>Contact__c</columns>
        <columns>enc_course_group__c</columns>
        <columns>eff_course_code_lookup__c</columns>
        <columns>eff_course_code__c</columns>
        <columns>eff_start_date__c</columns>
        <columns>enc_course_code__c</columns>
        <columns>enc_start_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>enc_category__c</field>
            <operation>equals</operation>
            <value>ACADEMIC</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Academic</label>
    </listViews>
    <listViews>
        <fullName>Active_Administrative</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>eff_apply_course__c</columns>
        <columns>enc_category__c</columns>
        <columns>eff_type__c</columns>
        <columns>Contact__c</columns>
        <columns>enc_course_group__c</columns>
        <columns>eff_course_code_lookup__c</columns>
        <columns>eff_start_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>enc_category__c</field>
            <operation>equals</operation>
            <value>ADMIN</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Administrative</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IsActive__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>eff_apply_course__c</columns>
        <columns>enc_category__c</columns>
        <columns>Contact__c</columns>
        <columns>enc_course_group__c</columns>
        <columns>eff_course_code_lookup__c</columns>
        <columns>eff_course_code__c</columns>
        <columns>eff_start_date__c</columns>
        <columns>enc_course_code__c</columns>
        <columns>enc_start_date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Recent</fullName>
        <columns>NAME</columns>
        <columns>IsActive__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>eff_apply_course__c</columns>
        <columns>enc_category__c</columns>
        <columns>Contact__c</columns>
        <columns>eff_start_date__c</columns>
        <columns>enc_course_code__c</columns>
        <columns>enc_start_date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>eff_expiry_date__c</columns>
        <columns>enc_expiry_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>All Recent</label>
    </listViews>
    <listViews>
        <fullName>Future_Expiry</fullName>
        <columns>NAME</columns>
        <columns>IsActive__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>eff_apply_course__c</columns>
        <columns>enc_category__c</columns>
        <columns>Contact__c</columns>
        <columns>eff_start_date__c</columns>
        <columns>enc_course_code__c</columns>
        <columns>enc_start_date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>eff_expiry_date__c</columns>
        <columns>enc_expiry_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>eff_expiry_date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>enc_expiry_date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Future Expiry</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Encumbrance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>